--- a/projects/estet/index.html
+++ b/projects/estet/index.html
@@ -227,6 +227,18 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="js/smooth-scroll.js"></script>
   <script src="js/parallax-bootstrap-4.js" type="text/javascript"></script>
+  <script>
+      $(document).ready(function(){
+        $("a[href*=#]").on("click", function(e){
+            var anchor = $(this);
+            $('html, body').stop().animate({
+                scrollTop: $(anchor.attr('href')).offset().top
+            }, 777);
+            e.preventDefault();
+            return false;
+        });
+    });
+  </script><
 </body>
 
 </html>
