--- a/projects/estet/index.html
+++ b/projects/estet/index.html
@@ -101,7 +101,7 @@
       </div>
     </div>
   </div>
-  <a class="yacor" name="gallery"> </a>
+  <a class="yacor" id="gallery"> </a>
   <div class="py-5 text-center bg-light shadow-h">
     <div class="container">
       <div class="row">
@@ -184,7 +184,7 @@
       </div>
     </div>
   </div>
-  <a class="yacor" name="review"> </a>
+  <a class="yacor" id="review"> </a>
   <div class="py-5 text-center" style="background-image: url('images/assets/black_wood_bg_2.jpg');">
     <div class="container">
       <div class="row">
@@ -238,7 +238,7 @@
             return false;
         });
     });
-  </script><
+  </script>
 </body>
 
 </html>
