--- a/projects/estet/sanya.html
+++ b/projects/estet/sanya.html
@@ -33,7 +33,7 @@
             <video autoplay muted loop width="100%" src="css/sanya.webm" class="positionable">
             </video>        
     </div>
-    <audio autoplay loop>
+    <audio autoplay loop controls>
         <source src="css/sanya1.mp3" type="audio/mpeg">
         <source src="css/sanya1.ogg" type="audio/ogg">
     </audio>
