--- a/projects/estet/sanya.html
+++ b/projects/estet/sanya.html
@@ -15,7 +15,7 @@
     body {
     background-color: rgb(0, 0, 0);
     }
-    video, audio {
+    video {
     position: absolute;
     top: 0px;
     right: 0px;
