--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p>hello</p>
   <p>i am full stack web developer: frontend (bootstrap, react), backend (django\flask, modx, postgresql, mysql\mariadb). also I'm a game developer (unity, godot) and a 3D artist</p>
   <br>
-  <p>site is currently under construction...</p>
+  <p>the website is currently under development...</p>
   <br>
   <p>contact me:</p>
   <ul>
