--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <br>
   <br>
   <p>hello</p>
-  <p>i am full stack web developer: frontend (bootstrap, react), backend (django\flask, modx, postgresql, mysql\mariadb). also I'm a game developer (unity, godot) and a 3D artist</p>
+  <p>i am full stack web developer: frontend (bootstrap, vuejs), backend (django\flask, modx, postgresql, mysql\mariadb). also I'm a game developer (unity, godot) and a 3D artist</p>
   <br>
   <p>the website is currently under development...</p>
   <br>
